--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 
 body{
     font-family: 'Raleway', sans-serif;
-    background-color: var(--grayBg);
+    background-color: var(--grayBg); /*var(--grayBg) */
     overflow: hidden;
 }
 
@@ -23,6 +23,7 @@ body{
     align-items: center;
     text-align: center;
     margin: 0 auto;
+    z-index: 2;
 }
 
 .me{
@@ -30,17 +31,23 @@ body{
 }
 
 #aboutMe :where(h1, p){
-    padding: 2rem 0 7.5rem 0;
+    padding: 17rem 0 5rem 0;
 
 }
 
 #aboutMe button{
     padding: 10px 35px;
     margin: 0 20px;
-    border: none;
+    border: 2px solid #3747A6;
     background-color: #435AD9;
     color: #FFF;
-
+    text-transform: uppercase;
+    font-family: 'LemonMilkMedium';
+    z-index: 999;
+    cursor: pointer;
+}
+#aboutMe button:hover{
+    cursor: pointer;
 }
 
 .myName{
@@ -53,4 +60,125 @@ body{
 .textAboutMe{
     text-align: justify;
     font-size: 20px;
+}
+
+/* star shooting */
+
+.starts {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 4px;
+    height: 4px;
+    background: #000;
+    border-radius: 50%;
+    box-shadow: 0 0 0 4px #435ad918, 0 0 0 8px #435ad90c, 0 0 20px #435ad938;
+    animation: animate 3s linear infinite;
+    z-index: 1;
+}
+
+.starts::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 300px;
+    height: 1px;
+    background: linear-gradient(90deg, #435ad9, transparent);
+}
+
+@keyframes animate {
+    0% {
+        transform: rotate(315deg) translateX(0);
+        opacity: 1;
+    }
+
+    70% {
+        opacity: 0.5;
+    }
+
+    100% {
+        transform: rotate(315deg) translateX(-1500px);
+        opacity: 0;
+    }
+}
+
+.starts:nth-child(1) {
+    top: -6px;
+    right: 0;
+    left: initial;
+    animation-delay: 0;
+    animation-duration: 1s;
+}
+
+.starts:nth-child(2) {
+    top: -6px;
+    right: 80px;
+    left: initial;
+    animation-delay: 0.2s;
+    animation-duration: 3s;
+}
+
+.starts:nth-child(3) {
+    top: -6px;
+    right: 0px;
+    left: initial;
+    animation-delay: 0.4s;
+    animation-duration: 2s;
+}
+
+.starts:nth-child(4) {
+    top: -6px;
+    right: 180px;
+    left: initial;
+    animation-delay: 0.6s;
+    animation-duration: 1.5s;
+}
+
+.starts:nth-child(5) {
+    top: -6px;
+    right: 400px;
+    left: initial;
+    animation-delay: 0.8s;
+    animation-duration: 2.5s;
+}
+
+.starts:nth-child(6) {
+    top: -6px;
+    right: 600px;
+    left: initial;
+    animation-delay: 1s;
+    animation-duration: 3s;
+}
+
+.starts:nth-child(7) {
+    top: -6px;
+    right: 0px;
+    left: initial;
+    animation-delay: 1s;
+    animation-duration: 1.75s;
+}
+
+.starts:nth-child(8) {
+    top: -6px;
+    right: 700px;
+    left: initial;
+    animation-delay: 1.4s;
+    animation-duration: 1.25s;
+}
+
+.starts:nth-child(9) {
+    top: -6px;
+    right: 1000px;
+    left: initial;
+    animation-delay: 0.75s;
+    animation-duration: 2.25s;
+}
+
+.starts:nth-child(10) {
+    top: -6px;
+    right: 1000px;
+    left: initial;
+    animation-delay: 2.75s;
+    animation-duration: 2.25s;
 }
