--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 }
 
 body{
-    font-family: 'Raleway', sans-serif;
+    font-family: 'SamsungSans-Regular', sans-serif;
     background-color: var(--grayBg); /*var(--grayBg) */
     overflow: hidden;
 }
@@ -104,7 +104,7 @@ body{
 }
 
 .starts:nth-child(1) {
-    top: -6px;
+    top: -14px;
     right: 0;
     left: initial;
     animation-delay: 0;
@@ -112,7 +112,7 @@ body{
 }
 
 .starts:nth-child(2) {
-    top: -6px;
+    top: -14px;
     right: 80px;
     left: initial;
     animation-delay: 0.2s;
@@ -120,7 +120,7 @@ body{
 }
 
 .starts:nth-child(3) {
-    top: -6px;
+    top: -14px;
     right: 0px;
     left: initial;
     animation-delay: 0.4s;
@@ -128,7 +128,7 @@ body{
 }
 
 .starts:nth-child(4) {
-    top: -6px;
+    top: -14px;
     right: 180px;
     left: initial;
     animation-delay: 0.6s;
@@ -136,7 +136,7 @@ body{
 }
 
 .starts:nth-child(5) {
-    top: -6px;
+    top: -14px;
     right: 400px;
     left: initial;
     animation-delay: 0.8s;
@@ -144,7 +144,7 @@ body{
 }
 
 .starts:nth-child(6) {
-    top: -6px;
+    top: -14px;
     right: 600px;
     left: initial;
     animation-delay: 1s;
@@ -152,7 +152,7 @@ body{
 }
 
 .starts:nth-child(7) {
-    top: -6px;
+    top: -14px;
     right: 0px;
     left: initial;
     animation-delay: 1s;
@@ -160,7 +160,7 @@ body{
 }
 
 .starts:nth-child(8) {
-    top: -6px;
+    top: -14px;
     right: 700px;
     left: initial;
     animation-delay: 1.4s;
@@ -168,7 +168,7 @@ body{
 }
 
 .starts:nth-child(9) {
-    top: -6px;
+    top: -14px;
     right: 1000px;
     left: initial;
     animation-delay: 0.75s;
@@ -176,9 +176,114 @@ body{
 }
 
 .starts:nth-child(10) {
-    top: -6px;
+    top: -14px;
     right: 1000px;
     left: initial;
     animation-delay: 2.75s;
     animation-duration: 2.25s;
+}
+
+@media screen and (max-width: 768px) {
+
+    .me{
+        width: 500px;
+    }
+
+    #profile{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        width: 100vw;
+        height: 100vh;
+        align-items: center;
+        text-align: center;
+        margin: 0;
+        z-index: 2;
+    }
+
+    .textAboutMe{
+        text-align: justify;
+        font-size: 20px;
+        margin: 0 10px;
+    }
+
+    .starts:nth-child(1) {
+        top: -14px;
+        right: 50%;
+        left: initial;
+        animation-delay: 0;
+        animation-duration: 1s;
+    }
+    
+    .starts:nth-child(2) {
+        top: -14px;
+        right: 50%;
+        left: initial;
+        animation-delay: 0.2s;
+        animation-duration: 3s;
+    }
+    
+    .starts:nth-child(3) {
+        top: -14px;
+        right: 50%;
+        left: initial;
+        animation-delay: 0.4s;
+        animation-duration: 2s;
+    }
+    
+    .starts:nth-child(4) {
+        top: -14px;
+        right: 50%;
+        left: initial;
+        animation-delay: 0.6s;
+        animation-duration: 1.5s;
+    }
+    
+    .starts:nth-child(5) {
+        top: -14px;
+        right: 50%;
+        left: initial;
+        animation-delay: 0.8s;
+        animation-duration: 2.5s;
+    }
+    
+    .starts:nth-child(6) {
+        top: -14px;
+        right: 50%;
+        left: initial;
+        animation-delay: 1s;
+        animation-duration: 3s;
+    }
+    
+    .starts:nth-child(7) {
+        top: -14px;
+        right: 50%;
+        left: initial;
+        animation-delay: 1s;
+        animation-duration: 1.75s;
+    }
+    
+    .starts:nth-child(8) {
+        top: -14px;
+        right: 50%;
+        left: initial;
+        animation-delay: 1.4s;
+        animation-duration: 1.25s;
+    }
+    
+    .starts:nth-child(9) {
+        top: -14px;
+        right: 50%;
+        left: initial;
+        animation-delay: 0.75s;
+        animation-duration: 2.25s;
+    }
+    
+    .starts:nth-child(10) {
+        top: -14px;
+        right: 50%;
+        left: initial;
+        animation-delay: 2.75s;
+        animation-duration: 2.25s;
+    }
+
 }
