--- a/src/assets/scss/extras.scss
+++ b/src/assets/scss/extras.scss
@@ -31,3 +31,34 @@
         color: #0D0D0D;
     }
 }
+
+@media screen and (max-width: 768px) {
+    .extras {
+        position: fixed;
+        width: 100vw;
+        height: 24px;
+        top: 24px;
+        right: 35px;
+        z-index: 99;
+        text-align: right;
+        // display: flex;
+        white-space: nowrap;
+
+        img {
+            cursor: pointer;
+            transition: all .25s;
+            height: 30px;
+            display: inline-block;
+            margin-right: 10px;
+        }
+
+        .beta {
+            position: fixed;
+            top: 8px;
+            right: 8px;
+            font-size: 8px;
+            color: #0D0D0D;
+        }
+
+    }
+}
