--- a/src/assets/scss/menu.scss
+++ b/src/assets/scss/menu.scss
@@ -82,3 +82,21 @@
       }
     }
   }
+  @media screen and (max-width: 768px) {
+    .me {
+        margin-top: 7vh;
+        width: 300px;
+    }
+
+    figure{
+        top: 500px;
+    }
+
+    #profile {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    #aboutMe :where(h1, p) {
+        padding: 1rem 0 1rem 0;
+    }
+}
