--- a/src/assets/scss/animation.scss
+++ b/src/assets/scss/animation.scss
@@ -3186,7 +3186,7 @@ figure {
     align-items: center;
     justify-content: center;
     width: 100vw;
-    height: 60vh; // 100%
+    height: 67vh; // 100%
     position: absolute;
     top: 0;
     z-index: 1;
@@ -3321,7 +3321,11 @@ figure {
 
 }
 
+
 @media screen and (max-width: 768px) {
+    #responsive{
+        height: 100vh;
+    }
     figure {
         // mix-blend-mode: overlay;
         --color: transparent;
@@ -3334,10 +3338,13 @@ figure {
         align-items: center;
         justify-content: center;
         width: 100%;
-        height: 20%; // 100%
+        height: 15%; // 100%
         position: absolute;
         top: 0;
         z-index: 1;
+        
+
+    
 
         svg {
             font-family: 'LemonMilkBold', 'impact', sans-serif;
@@ -3345,16 +3352,41 @@ figure {
             top: -60%;
             height: 100%; // 100%
             z-index: 1;
-        }¨
+            top: 50vh;
+
+            
+
+
+        }
 
         svg text {
             text-transform: uppercase;
             stroke-width: var(--strokeWidth);
             stroke: var(--color);
-            font-size: calc(var(--fontSize) + 10px);
+            font-size: calc(var(--fontSize) + 30px);
             letter-spacing: -10px;
             z-index: 1;
+            position: absolute;
+            left: 50vw;
+            top: 40vh;
         }
+
+    }
+
+}
+
+@media screen and (max-width: 320px) {
+
+    svg {
+        font-family: 'LemonMilkBold', 'impact', sans-serif;
+        position: absolute;
+        top: -60%;
+        height: 100%; // 100%
+        z-index: 1;
+        top: 22vh;
+
+        
+
 
     }
 
